[tool.poetry]
name = "mrpo9"
version = "0.1.0"
description = ""
authors = ["AnnijaKaupere <annijakaupere@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.98.0"
sqlalchemy = "^2.0.17"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"
alembic = "^1.11.1"
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"